# neuronSeqSampler

./: .gitignore  CMakeLists.txt  README.md  README_CPP.md  build.sh  nSGUI.py  nSGUIDemo.py  nSSampler.py  neuronSeqBase.py
src/: AudioManager.cpp  AudioManager.h  Connection.cpp  Connection.h  GUI.cpp  GUI.h  Neuron.cpp  Neuron.h  NeuronNetwork.cpp  NeuronNetwork.h  Visualizer.cpp  Visualizer.h  main.cpp
